# nanobind_example

./: .gitignore  LICENSE
mwe/: CMakeLists.txt  README.md  main.py  pyproject.toml
mwe/src/: nanobind.cpp
mwe/src/mwe_py/: __init__.py
